# LiveEventAnalyser

./: .env.example  LICENSE  README.md  audience.py  backendOrder.md  done_backend.md  integrationOrder.md  live_analysis.py  live_ingestion.py  llm_algorithm.md  pyproject.toml  rule_analysis.py  spec.md
data/: hackathon_mock_attendees.xlsx
data/sessions/: are-we-still-backing-the-crazy-ones-day-1__209e6b9e.md  block-1-day-1__de87e2d4.md  block-1-day-2__73320db2.md  block-2-day-1__a5a45949.md  block-2-day-2__e69199b2.md  block-3-day-2__41738aee.md  block-3-day-3__bc22ecc2.md  born-in-europe-should-you-leave-to-win-day-1__0a70ef0f.md  build-exit-fund-the-unfiltered-truth-about-winning-in-europe-day-2__3431573b.md  european-dynamism-building-europes-first-trillion-dollar-company-day-1__199542f4.md  european-dynamism-europes-energy-moonshot-day-1__05eddf04.md  from-hsg-to-backing-billion-dollar-companies-day-1__2d9c740f.md  from-underground-to-fda-the-20b-psychedelic-opportunity-day-2__8f3494ae.md  from-zero-to-millions-building-network-effects-day-2__b199ba16.md  hack-final-day-2__0703c402.md  hack-final-winner-announcement-day-2__ff41be74.md  how-europe-scales-ai-category-winners-day-1__e9e73566.md  hsg-founder-of-the-year-award-day-2__8b1cda62.md  life-or-death-in-the-age-of-ai-day-2__62a1bc91.md  opening-ceremony-day-1__75dda887.md  quantum-is-leaving-the-lab-day-2__4c5ce648.md  (+9 more)
docs/: frontend_checklist.md  frontend_order.md  spec.md
tests/: test_backend_integration.py  test_backend_live_analysis.py  test_elevenlabs_live.py  test_frontend_state.py
(+9 files in other folders)
