[project]
name = "live-event-analyser"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.5.0",
    "streamlit>=1.51.0",
    "streamlit-webrtc>=0.63.0",
    "websockets>=13.0",
]

[tool.poetry]
package-mode = false

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
